--- a/index.html
+++ b/index.html
@@ -560,42 +560,194 @@
     </div>
 
     <!-- Instructors Section -->
-    <!-- ...(unchanged instructor cards and content below) -->
-    <!-- Code of Conduct, FAQ, Free Class, Footer sections here ... unchanged ... -->
+    <section id="instructors" class="instructors-section">
+      <div class="instructors-title">Instructors</div>
+      <div class="instructors-list">
+        <div class="instructor-card">
+          <img src="mcm_5th_degree.jpg" alt="Professor Marcello C Monteiro" />
+          <h3>Professor Marcello C Monteiro</h3>
+          <p class="bio-short">Master Monteiro is well known in Brazil as a teacher and coach for creating fighting strategies...</p>
+          <p class="bio-full" style="display:none;">
+            Since the age of six, Marcello has been hooked on Jiu-Jitsu, starting at Carlson Gracie's Academy and transitioning to W2M in Copacabana. Owned by Ricardo Juca, W2M was the home base for Jiu-Jitsu legend Ricardo De la Riva. From White-Black, Marcello studied with De la Riva and many considered him as De la Riva's protege. In 1998, Marcello opened his first school in Rio and in 1999, Marcello received his Black Belt from De la Riva. In 2001, he received an additional certificate for his black belt from 9th Degree Red Belt Carlos Robson Gracie. Today Marcello holds a 6th Degree Black Belt. He also leads one of America's largest Jiu-Jitsu Associations with over 100 schools training under him, including Michael Proctor's Brazilian Jiu-Jitsu Academy of Tacoma.
+          </p>
+          <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
+        </div>
+        <div class="instructor-card">
+          <img src="michael_proctor.JPG" alt="Professor Michael Proctor" />
+          <h3>Professor Michael Proctor</h3>
+          <p class="bio-short">Michael Proctor is a Marcello Monteiro protégé who began his career under Lotus Club Jiu-Jitsu...</p>
+          <p class="bio-full" style="display:none;">
+            Michael began his Brazilian Jiu-Jitsu career under Lotus Club Jiu-Jitsu, transitioning to De La Riva Black Belt Marcello Monteiro in 2008. In 2010 Michael opened the first Marcello C. Monteiro Academy in Washington State. Michael is the proud owner of Brazilian Jiu-Jitsu Tacoma and currently holds the rank of 3rd Degree Black Belt under Marcello C. Monteiro.
+          </p>
+          <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
+        </div>
+        <div class="instructor-card">
+          <img src="david_gines.JPG" alt="Professor David Gines" />
+          <h3>Professor David Gines</h3>
+          <p class="bio-short">2nd Degree Black Belt under Michael Proctor & Marcello C. Monteiro.</p>
+          <p class="bio-full" style="display:none;">
+            David is a 2nd Degree Black Belt under Michael Proctor & Marcello C. Monteiro, dedicated to delivering high-quality instruction and fostering growth in every student.
+          </p>
+          <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
+        </div>
+      </div>
+    </section>
 
-    <!-- (Insert your unchanged Code of Conduct, FAQ, Try a Free Class, and Footer sections here) -->
+    <!-- Code of Conduct -->
+    <section id="conduct" class="conduct-section">
+      <h2>Code of Conduct</h2>
+      <div class="content-collapsible" id="conduct-content">
+        <ul>
+          <li>01. Always be respectful.</li>
+          <li>02. Always address Professors and Coaches accordingly.</li>
+          <li>03. Uphold the integrity of our principles on and off the mats.</li>
+          <li>04. If you are late, wait outside the mats until the Instructor gives you permission to join.</li>
+          <li>05. Bow on and off the mats.</li>
+          <li>06. Do not leave the mat area without permission from the Instructor.</li>
+          <li>07. During class, when the instructor is demonstrating techniques, every student must sit or stand in good posture.</li>
+          <li>08. Talking should be kept to a minimum level and should relate to the class subject.</li>
+          <li>09. No foul language inside the school.</li>
+          <li>10. Be Humble</li>
+          <li>11. Believe & Achieve</li>
+        </ul>
+        <strong>Etiquette</strong>
+        <ul>
+          <li>12. No shoes on the mats. Shoes or flip flops required when you are not on the mats.</li>
+          <li>13. No food or open containers/cups. Bottled drinks only.</li>
+          <li>14. No electronic devices allowed in the training area.</li>
+          <li>15. Change in the designated changing areas. Do not change in the restrooms.</li>
+          <li>16. All training gear and bags should be left in the bag area, not on the benches or around the training area.</li>
+        </ul>
+        <strong>Hygiene</strong>
+        <ul>
+          <li>17. Always keep good hygiene.</li>
+          <li>18. The uniform must be clean at all times.</li>
+          <li>19. Keep fingernails and toenails trimmed.</li>
+          <li>20. All jewelry, piercings, necklaces, and other items should be removed during training.</li>
+        </ul>
+        <strong>Uniform</strong>
+        <ul>
+          <li>21. All students must wear our patches on their uniform at all times.</li>
+          <li>22. Absolutely, no other school/affiliation patches may be worn for training.</li>
+        </ul>
+        <strong>Spectators</strong>
+        <ul>
+          <li>23. Spectators must sit in the designated seating area.</li>
+          <li>24. Keep all electronic devices silent unless given prior permission to have them on.</li>
+          <li>25. Absolutely NO coaching your children or other students during class.</li>
+        </ul>
+      </div>
+      <button class="read-more-section-btn" onclick="toggleSection('conduct-content')">Read More</button>
+    </section>
 
+    <!-- FAQ's -->
+    <section id="faqs" class="faqs-section">
+      <h2>Brazilian Jiu-Jitsu FAQ's</h2>
+      <div class="content-collapsible" id="faqs-content">
+        <div class="faq-item">
+          <div class="faq-q">1. What can BJJ and your school do for me?</div>
+          <div class="faq-a">BJJ is a highly effective form of self-defense that promotes a healthy lifestyle. Adding BJJ to your life will help you get in shape, gain self-confidence and self-discipline, and relieve stress while forming a network of like-minded people sure to motivate and inspire you. Our Brazilian Jiu-Jitsu Academy in Tacoma offers a safe, friendly, and family-style atmosphere that many of our students consider their second home.</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">2. Do I need to be in shape for this?</div>
+          <div class="faq-a">We are proud to cater to all fitness levels here at the academy and have many students whose exercise routines were limited or non-existent prior to joining the academy. Our team will ensure a progressive and gradual plan to help you acclimate to our programs while achieving your fitness goals.</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">3. Am I too old to train?</div>
+          <div class="faq-a">Classes are enjoyed by younger and older students alike. Our classes and programs are designed to meet the training goals and provide results for students of any age.</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">4. Will I be expected to compete?</div>
+          <div class="faq-a">Those who wish to do so can, but it is NOT a requirement.</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">5. Do I need to have prior experience?</div>
+          <div class="faq-a">No. You do not need to have practiced in any form of martial art to train at our academy.</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">6. Do you offer beginner level classes?</div>
+          <div class="faq-a">Yes. We have beginner level classes that are designed for students with no experience through up to one year of experience. These classes, with a specific, detailed curriculum, stress the basics necessary to build a solid base and grow in a healthy and productive manner.</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">7. Do you offer striking or kickboxing classes?</div>
+          <div class="faq-a">Yes. We offer MMA training which incorporate Muay Thai Kickboxing and Boxing. These particular arts are a great complement to BJJ and are other major components of mixed martial arts today. In addition, it is a fantastic workout and a great way to keep in shape.</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">8. I want to lose weight, can your school and programs help me?</div>
+          <div class="faq-a">Absolutely. Both our Brazilian Jiu-Jitsu and MMA Classes offer a fantastic workout that you cannot achieve through your typical gym routines. These classes involve your entire body and will develop and challenge your physical abilities. We have had many students who have combined healthy eating with our Brazilian Jiu-Jitsu and MMA programs to lose great amounts of weight.</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">9. What does a typical class consist of?</div>
+          <div class="faq-a">Each class begins with a warm-up routine designed to prepare your body for the actual class and help reduce injuries. After the warm-up, technical instruction begins. The techniques taught vary according to the instructor's goals for that particular class. After the technical instruction, students engage in live sparring or rolling. An essential part of every class, live sparring allows students to practice the techniques they have learned against a resisting partner, break a sweat, and reap the rewards of a very good workout.</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">10. Do you offer family discounts?</div>
+          <div class="faq-a">Yes. Please speak with staff regarding the discounts available to family members.</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">11. What is the cost of membership?</div>
+          <div class="faq-a">Pricing will depend on each individual's needs. We encourage prospective students to try out an introductory class so that we can assess each individual's goals and determine what he or she would like to get out of training. We can then make a recommendation for frequency of training and what classes would be best suited for each individual.</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">12. Do you offer classes for kids and at what age do you start at?</div>
+          <div class="faq-a">Yes, we currently offer kids and teens classes. Students for BJJ can enroll as young as 5 years old.</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">13. How long will it take to get my Black Belt?</div>
+          <div class="faq-a">This is a common question, but one that has no exact answer. The journey to black belt depends on each individual's abilities, perseverance, and dedication. Students must train hard and be prepared overcome many obstacles on their journey to black belt.</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">14. How do I get started?</div>
+          <div class="faq-a">To get started with your training, contact us or give us a call @ <a href="tel:2532546538" style="color:#14307f; text-decoration:underline;">253-254-6538</a>. We look forward to seeing you on the mats!</div>
+        </div>
+      </div>
+      <button class="read-more-section-btn" onclick="toggleSection('faqs-content')">Read More</button>
+    </section>
+
+    <!-- Try a Free Class -->
+    <section id="try-free-class" class="try-free-class">
+      <h2>TRY A FREE CLASS</h2>
+      <p>By filling out the form completely, you will receive membership information in your email.</p>
+      <form action="mailto:gritcitybjj@gmail.com" method="POST" enctype="text/plain">
+        <input type="text" name="Name" placeholder="Name (required)" required />
+        <input type="email" name="Email" placeholder="Email (required)" required />
+        <input type="tel" name="Phone" placeholder="Phone (optional)" />
+        <textarea name="Message" placeholder="Questions or Comments (optional)" rows="4"></textarea>
+        <button type="submit">Submit</button>
+      </form>
+      <div style="margin-top: 8px; font-size: 0.95em; color: #888;">
+        Or call us at
+        <a href="tel:2532546538" style="color:#153088;text-decoration:underline;">253-254-6538</a>
+      </div>
+    </section>
   </div>
 
-  <!-- Modal for all image pop-ups -->
-  <div id="img-modal" style="display:none;position:fixed;z-index:9999;top:0;left:0;width:100vw;height:100vh;background:rgba(20,30,40,0.91);align-items:center;justify-content:center;">
-    <img id="modal-img" src="" alt="Popup" style="max-width:96vw;max-height:90vh;border-radius:12px;box-shadow:0 3px 32px #000b;">
-    <span onclick="closeModal()" style="position:absolute;top:20px;right:40px;font-size:3rem;color:#fff;cursor:pointer;font-family:sans-serif;font-weight:700;line-height:1;">&times;</span>
-  </div>
+  <footer>
+    <div class="footer-logos-row">
+      <img src="sanitized_facility.jpg" alt="Sanitized Facility" class="sanitized" />
+      <img src="military_discounts.gif" alt="Military Discounts" class="military" />
+      <img src="no_bullies.jpg" alt="No Bullies" class="bullies" />
+    </div>
+    <div class="social-links">
+      <a href="https://www.instagram.com/gritcitybjj" target="_blank" title="Instagram" rel="noopener noreferrer">
+        <img src="instagram.png" alt="Instagram" />
+      </a>
+      <a href="https://x.com/gritcitybjj" target="_blank" title="𝕏" rel="noopener noreferrer">
+        <img src="𝕏.png" alt="𝕏" style="background:#000;" />
+      </a>
+      <a href="https://www.facebook.com/gritcitybjj" target="_blank" title="Facebook" rel="noopener noreferrer">
+        <img src="facebook.png" alt="Facebook" />
+      </a>
+    </div>
+    <div class="footer-bottom">&copy; 2025 GRIT CITY BJJ | All Rights Reserved</div>
+  </footer>
 
+  <!-- Modal for image pop-up -->
+  <div id="imgModal" style="display:none;position:fixed;z-index:1111;left:0;top:0;width:100vw;height:100vh;background:rgba(20,30,44,0.94);align-items:center;justify-content:center;">
+    <span onclick="closeModal()" style="position:absolute;top:30px;right:45px;font-size:40px;font-weight:bold;color:#fff;cursor:pointer;user-select:none;">&times;</span>
+    <img id="modalImg" src="" alt="Enlarged" style="max-width:92vw;max-height:85vh;box-shadow:0 2px 32px #000c;border-radius:12px;">
+  </div>
   <script>
-    // Image pop-up modal
-    function openModal(event, src) {
-      event.preventDefault();
-      var modal = document.getElementById('img-modal');
-      var img = document.getElementById('modal-img');
-      img.src = src;
-      modal.style.display = 'flex';
-      document.body.style.overflow = 'hidden';
-    }
-    function closeModal() {
-      var modal = document.getElementById('img-modal');
-      modal.style.display = 'none';
-      document.getElementById('modal-img').src = '';
-      document.body.style.overflow = '';
-    }
-    window.addEventListener('keydown', function(e) {
-      if (e.key === 'Escape') closeModal();
-    });
-    document.getElementById('img-modal').onclick = function(e) {
-      if (e.target.id === 'img-modal') closeModal();
-    };
-
     // Instructor Bio toggle
     function toggleBio(button) {
       const card = button.parentElement;
@@ -623,6 +775,29 @@
         const target = document.querySelector(this.getAttribute('href'));
         if (target) target.scrollIntoView({ behavior: 'smooth' });
       });
+    });
+
+    // Image Modal Pop-Up
+    function openModal(e, imgSrc) {
+      e.preventDefault();
+      const modal = document.getElementById('imgModal');
+      const modalImg = document.getElementById('modalImg');
+      modal.style.display = 'flex';
+      modalImg.src = imgSrc;
+      document.body.style.overflow = 'hidden';
+    }
+    function closeModal() {
+      document.getElementById('imgModal').style.display = 'none';
+      document.getElementById('modalImg').src = '';
+      document.body.style.overflow = '';
+    }
+    // Allow modal close on ESC
+    window.addEventListener('keydown', function(e){
+      if(e.key==='Escape') closeModal();
+    });
+    // Allow modal click outside image to close
+    document.getElementById('imgModal').addEventListener('click', function(e){
+      if(e.target===this) closeModal();
     });
   </script>
 </body>
