--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
       <img src="carlos_gracie_sr.jpeg" alt="Carlos Gracie Sr." onclick="openModal(this.src, this.alt)" />
       <img src="carlson_gracie_sr.jpeg" alt="Carlson Gracie Sr." onclick="openModal(this.src, this.alt)" />
       <img src="ricardo_de_la_riva.jpeg" alt="Ricardo de la Riva" onclick="openModal(this.src, this.alt)" />
-      <img src="marcello_c_monteiro.jpeg" alt="Marcello C Monteiro" onclick="openModal(this.src, this.alt)" />
+      <img src="marcello_c_monteiro.jpg" alt="Marcello C Monteiro" onclick="openModal(this.src, this.alt)" />
       <img src="michael_proctor_sr.png" alt="Michael Proctor" onclick="openModal(this.src, this.alt)" />
     </div>
 
@@ -539,7 +539,7 @@
         </div>
 
         <div class="instructor-card">
-          <img src="michael_proctor.jpg" alt="Professor Michael Proctor" />
+          <img src="michael_proctor.JPG" alt="Professor Michael Proctor" />
           <h3>Professor Michael Proctor</h3>
           <p class="bio-short">Michael Proctor is a Marcello Monteiro protégé who began his career under Lotus Club Jiu-Jitsu...</p>
           <p class="bio-full" style="display:none;">[Full bio omitted here for brevity]</p>
@@ -547,7 +547,7 @@
         </div>
 
         <div class="instructor-card">
-          <img src="david_gines.jpg" alt="Professor David Gines" />
+          <img src="david_gines.JPG" alt="Professor David Gines" />
           <h3>Professor David Gines</h3>
           <p class="bio-short">2nd Degree Black Belt under Michael Proctor & Marcello C. Monteiro.</p>
           <p class="bio-full" style="display:none;">[Full bio omitted here for brevity]</p>
