--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
       <img src="carlos_gracie_sr.jpeg" alt="Carlos Gracie Sr." onclick="openModal(this.src, this.alt)" />
       <img src="carlson_gracie_sr.jpeg" alt="Carlson Gracie Sr." onclick="openModal(this.src, this.alt)" />
       <img src="ricardo_de_la_riva.jpeg" alt="Ricardo de la Riva" onclick="openModal(this.src, this.alt)" />
-      <img src="marcello_c_monteiro.jpg" alt="Marcello C Monteiro" onclick="openModal(this.src, this.alt)" />
+      <img src="marcello_c_montiero.jpeg" alt="Marcello C Monteiro" onclick="openModal(this.src, this.alt)" />
       <img src="michael_proctor_sr.png" alt="Michael Proctor" onclick="openModal(this.src, this.alt)" />
     </div>
 
