--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
       <img src="carlos_gracie_sr.jpeg" alt="Carlos Gracie Sr." onclick="openImgPopup(this)" />
       <img src="carlson_gracie_sr.jpeg" alt="Carlson Gracie Sr." onclick="openImgPopup(this)" />
       <img src="ricardo_de_la_riva.jpeg" alt="Ricardo de la Riva" onclick="openImgPopup(this)" />
-      <img src="marcello_c_monteiro.jpeg" alt="Marcello C Monteiro" onclick="openImgPopup(this)" />
+      <img src="marcello_c_montiero.jpeg" alt="Marcello C Monteiro" onclick="openImgPopup(this)" />
       <img src="michael_proctor_sr.png" alt="Michael Proctor" onclick="openImgPopup(this)" />
     </div>
 
@@ -449,14 +449,14 @@
           <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
         </div>
         <div class="instructor-card">
-          <img src="michael_proctor.jpg" alt="Professor Michael Proctor" />
+          <img src="michael_proctor.JPG" alt="Professor Michael Proctor" />
           <h3>Professor Michael Proctor</h3>
           <p class="bio-short">Michael Proctor is a Marcello Monteiro protégé who began his career under Lotus Club Jiu-Jitsu...</p>
           <p class="bio-full" style="display:none;">[Full bio omitted here for brevity]</p>
           <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
         </div>
         <div class="instructor-card">
-          <img src="david_gines.jpg" alt="Professor David Gines" />
+          <img src="david_gines.JPG" alt="Professor David Gines" />
           <h3>Professor David Gines</h3>
           <p class="bio-short">2nd Degree Black Belt under Michael Proctor & Marcello C. Monteiro.</p>
           <p class="bio-full" style="display:none;">[Full bio omitted here for brevity]</p>
