--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>GRIT CITY BJJ | Tacoma, WA</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    /* --- your stylesheet, unchanged --- */
     body {
       background: #fff;
       color: #222;
@@ -348,46 +347,6 @@
         max-height: 25px;
       }
     }
-    /* Collapsible toggles */
-    .collapsible {
-      cursor: pointer;
-      user-select: none;
-      outline: none;
-      border: none;
-      background: none;
-      font: inherit;
-      font-weight: bold;
-      color: #14307f;
-      margin-bottom: 8px;
-      font-size: 1.15em;
-      text-align: left;
-      width: 100%;
-      padding: 0;
-      transition: color 0.15s;
-      display: block;
-    }
-    .collapsible.active,
-    .collapsible:hover {
-      color: #314be7;
-    }
-    .collapsible:after {
-      content: ' ▼';
-      font-size: 0.85em;
-      color: #999;
-    }
-    .collapsible.active:after {
-      content: ' ▲';
-      color: #314be7;
-    }
-    .collapsible-content {
-      display: none;
-      margin-bottom: 10px;
-      margin-top: 0;
-      padding-left: 0;
-    }
-    .collapsible-content.active {
-      display: block;
-    }
   </style>
 </head>
 <body>
@@ -508,8 +467,8 @@
 
     <!-- Code of Conduct -->
     <section id="conduct" class="conduct-section">
-      <button class="collapsible active">Code of Conduct</button>
-      <div class="collapsible-content active">
+      <h2>Code of Conduct</h2>
+      <div>
         <ul>
           <li>01. Always be respectful.</li>
           <li>02. Always address Professors and Coaches accordingly.</li>
@@ -523,32 +482,40 @@
           <li>10. Be Humble</li>
           <li>11. Believe & Achieve</li>
         </ul>
-        <strong>Etiquette</strong>
-        <ul>
-          <li>12. No shoes on the mats. Shoes or flip flops required when you are not on the mats.</li>
-          <li>13. No food or open containers/cups. Bottled drinks only.</li>
-          <li>14. No electronic devices allowed in the training area.</li>
-          <li>15. Change in the designated changing areas. Do not change in the restrooms.</li>
-          <li>16. All training gear and bags should be left in the bag area, not on the benches or around the training area.</li>
-        </ul>
-        <strong>Hygiene</strong>
-        <ul>
-          <li>17. Always keep good hygiene.</li>
-          <li>18. The uniform must be clean at all times.</li>
-          <li>19. Keep fingernails and toenails trimmed.</li>
-          <li>20. All jewelry, piercings, necklaces, and other items should be removed during training.</li>
-        </ul>
-        <strong>Uniform</strong>
-        <ul>
-          <li>21. All students must wear our patches on their uniform at all times.</li>
-          <li>22. Absolutely, no other school/affiliation patches may be worn for training.</li>
-        </ul>
-        <strong>Spectators</strong>
-        <ul>
-          <li>23. Spectators must sit in the designated seating area.</li>
-          <li>24. Keep all electronic devices silent unless given prior permission to have them on.</li>
-          <li>25. Absolutely NO coaching your children or other students during class.</li>
-        </ul>
+        <details>
+          <summary><strong>Etiquette</strong></summary>
+          <ul>
+            <li>12. No shoes on the mats. Shoes or flip flops required when you are not on the mats.</li>
+            <li>13. No food or open containers/cups. Bottled drinks only.</li>
+            <li>14. No electronic devices allowed in the training area.</li>
+            <li>15. Change in the designated changing areas. Do not change in the restrooms.</li>
+            <li>16. All training gear and bags should be left in the bag area, not on the benches or around the training area.</li>
+          </ul>
+        </details>
+        <details>
+          <summary><strong>Hygiene</strong></summary>
+          <ul>
+            <li>17. Always keep good hygiene.</li>
+            <li>18. The uniform must be clean at all times.</li>
+            <li>19. Keep fingernails and toenails trimmed.</li>
+            <li>20. All jewelry, piercings, necklaces, and other items should be removed during training.</li>
+          </ul>
+        </details>
+        <details>
+          <summary><strong>Uniform</strong></summary>
+          <ul>
+            <li>21. All students must wear our patches on their uniform at all times.</li>
+            <li>22. Absolutely, no other school/affiliation patches may be worn for training.</li>
+          </ul>
+        </details>
+        <details>
+          <summary><strong>Spectators</strong></summary>
+          <ul>
+            <li>23. Spectators must sit in the designated seating area.</li>
+            <li>24. Keep all electronic devices silent unless given prior permission to have them on.</li>
+            <li>25. Absolutely NO coaching your children or other students during class.</li>
+          </ul>
+        </details>
       </div>
     </section>
 
@@ -556,90 +523,62 @@
     <section id="faqs" class="faqs-section">
       <h2>Brazilian Jiu-Jitsu FAQ's</h2>
       <div>
-        <div class="faq-item">
-          <button class="collapsible">1. What can BJJ and your school do for me?</button>
-          <div class="collapsible-content">
-            BJJ is a highly effective form of self-defense that promotes a healthy lifestyle. Adding BJJ to your life will help you get in shape, gain self-confidence and self-discipline, and relieve stress while forming a network of like-minded people sure to motivate and inspire you. Our Brazilian Jiu-Jitsu Academy in Tacoma offers a safe, friendly, and family-style atmosphere that many of our students consider their second home.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="collapsible">2. Do I need to be in shape for this?</button>
-          <div class="collapsible-content">
-            We are proud to cater to all fitness levels here at the academy and have many students whose exercise routines were limited or non-existent prior to joining the academy. Our team will ensure a progressive and gradual plan to help you acclimate to our programs while achieving your fitness goals.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="collapsible">3. Am I too old to train?</button>
-          <div class="collapsible-content">
-            Classes are enjoyed by younger and older students alike. Our classes and programs are designed to meet the training goals and provide results for students of any age.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="collapsible">4. Will I be expected to compete?</button>
-          <div class="collapsible-content">
-            Those who wish to do so can, but it is NOT a requirement.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="collapsible">5. Do I need to have prior experience?</button>
-          <div class="collapsible-content">
-            No. You do not need to have practiced in any form of martial art to train at our academy.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="collapsible">6. Do you offer beginner level classes?</button>
-          <div class="collapsible-content">
-            Yes. We have beginner level classes that are designed for students with no experience through up to one year of experience. These classes, with a specific, detailed curriculum, stress the basics necessary to build a solid base and grow in a healthy and productive manner.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="collapsible">7. Do you offer striking or kickboxing classes?</button>
-          <div class="collapsible-content">
-            Yes. We offer MMA training which incorporate Muay Thai Kickboxing and Boxing. These particular arts are a great complement to BJJ and are other major components of mixed martial arts today. In addition, it is a fantastic workout and a great way to keep in shape.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="collapsible">8. I want to lose weight, can your school and programs help me?</button>
-          <div class="collapsible-content">
-            Absolutely. Both our Brazilian Jiu-Jitsu and MMA Classes offer a fantastic workout that you cannot achieve through your typical gym routines. These classes involve your entire body and will develop and challenge your physical abilities. We have had many students who have combined healthy eating with our Brazilian Jiu-Jitsu and MMA programs to lose great amounts of weight.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="collapsible">9. What does a typical class consist of?</button>
-          <div class="collapsible-content">
-            Each class begins with a warm-up routine designed to prepare your body for the actual class and help reduce injuries. After the warm-up, technical instruction begins. The techniques taught vary according to the instructor's goals for that particular class. After the technical instruction, students engage in live sparring or rolling. An essential part of every class, live sparring allows students to practice the techniques they have learned against a resisting partner, break a sweat, and reap the rewards of a very good workout.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="collapsible">10. Do you offer family discounts?</button>
-          <div class="collapsible-content">
-            Yes. Please speak with staff regarding the discounts available to family members.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="collapsible">11. What is the cost of membership?</button>
-          <div class="collapsible-content">
-            Pricing will depend on each individual's needs. We encourage prospective students to try out an introductory class so that we can assess each individual's goals and determine what he or she would like to get out of training. We can then make a recommendation for frequency of training and what classes would be best suited for each individual.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="collapsible">12. Do you offer classes for kids and at what age do you start at?</button>
-          <div class="collapsible-content">
-            Yes, we currently offer kids and teens classes. Students for BJJ can enroll as young as 5 years old.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="collapsible">13. How long will it take to get my Black Belt?</button>
-          <div class="collapsible-content">
-            This is a common question, but one that has no exact answer. The journey to black belt depends on each individual's abilities, perseverance, and dedication. Students must train hard and be prepared overcome many obstacles on their journey to black belt.
-          </div>
-        </div>
-        <div class="faq-item">
-          <button class="collapsible">14. How do I get started?</button>
-          <div class="collapsible-content">
-            To get started with your training, contact us or give us a call @ <a href="tel:2532546538" style="color:#14307f; text-decoration:underline;">253-254-6538</a>. We look forward to seeing you on the mats!
-          </div>
-        </div>
+        <details class="faq-item">
+          <summary class="faq-q">1. What can BJJ and your school do for me?</summary>
+          <div class="faq-a">BJJ is a highly effective form of self-defense that promotes a healthy lifestyle. Adding BJJ to your life will help you get in shape, gain self-confidence and self-discipline, and relieve stress while forming a network of like-minded people sure to motivate and inspire you. Our Brazilian Jiu-Jitsu Academy in Tacoma offers a safe, friendly, and family-style atmosphere that many of our students consider their second home.</div>
+        </details>
+        <details class="faq-item">
+          <summary class="faq-q">2. Do I need to be in shape for this?</summary>
+          <div class="faq-a">We are proud to cater to all fitness levels here at the academy and have many students whose exercise routines were limited or non-existent prior to joining the academy. Our team will ensure a progressive and gradual plan to help you acclimate to our programs while achieving your fitness goals.</div>
+        </details>
+        <details class="faq-item">
+          <summary class="faq-q">3. Am I too old to train?</summary>
+          <div class="faq-a">Classes are enjoyed by younger and older students alike. Our classes and programs are designed to meet the training goals and provide results for students of any age.</div>
+        </details>
+        <details class="faq-item">
+          <summary class="faq-q">4. Will I be expected to compete?</summary>
+          <div class="faq-a">Those who wish to do so can, but it is NOT a requirement.</div>
+        </details>
+        <details class="faq-item">
+          <summary class="faq-q">5. Do I need to have prior experience?</summary>
+          <div class="faq-a">No. You do not need to have practiced in any form of martial art to train at our academy.</div>
+        </details>
+        <details class="faq-item">
+          <summary class="faq-q">6. Do you offer beginner level classes?</summary>
+          <div class="faq-a">Yes. We have beginner level classes that are designed for students with no experience through up to one year of experience. These classes, with a specific, detailed curriculum, stress the basics necessary to build a solid base and grow in a healthy and productive manner.</div>
+        </details>
+        <details class="faq-item">
+          <summary class="faq-q">7. Do you offer striking or kickboxing classes?</summary>
+          <div class="faq-a">Yes. We offer MMA training which incorporate Muay Thai Kickboxing and Boxing. These particular arts are a great complement to BJJ and are other major components of mixed martial arts today. In addition, it is a fantastic workout and a great way to keep in shape.</div>
+        </details>
+        <details class="faq-item">
+          <summary class="faq-q">8. I want to lose weight, can your school and programs help me?</summary>
+          <div class="faq-a">Absolutely. Both our Brazilian Jiu-Jitsu and MMA Classes offer a fantastic workout that you cannot achieve through your typical gym routines. These classes involve your entire body and will develop and challenge your physical abilities. We have had many students who have combined healthy eating with our Brazilian Jiu-Jitsu and MMA programs to lose great amounts of weight.</div>
+        </details>
+        <details class="faq-item">
+          <summary class="faq-q">9. What does a typical class consist of?</summary>
+          <div class="faq-a">Each class begins with a warm-up routine designed to prepare your body for the actual class and help reduce injuries. After the warm-up, technical instruction begins. The techniques taught vary according to the instructor's goals for that particular class. After the technical instruction, students engage in live sparring or rolling. An essential part of every class, live sparring allows students to practice the techniques they have learned against a resisting partner, break a sweat, and reap the rewards of a very good workout.</div>
+        </details>
+        <details class="faq-item">
+          <summary class="faq-q">10. Do you offer family discounts?</summary>
+          <div class="faq-a">Yes. Please speak with staff regarding the discounts available to family members.</div>
+        </details>
+        <details class="faq-item">
+          <summary class="faq-q">11. What is the cost of membership?</summary>
+          <div class="faq-a">Pricing will depend on each individual's needs. We encourage prospective students to try out an introductory class so that we can assess each individual's goals and determine what he or she would like to get out of training. We can then make a recommendation for frequency of training and what classes would be best suited for each individual.</div>
+        </details>
+        <details class="faq-item">
+          <summary class="faq-q">12. Do you offer classes for kids and at what age do you start at?</summary>
+          <div class="faq-a">Yes, we currently offer kids and teens classes. Students for BJJ can enroll as young as 5 years old.</div>
+        </details>
+        <details class="faq-item">
+          <summary class="faq-q">13. How long will it take to get my Black Belt?</summary>
+          <div class="faq-a">This is a common question, but one that has no exact answer. The journey to black belt depends on each individual's abilities, perseverance, and dedication. Students must train hard and be prepared overcome many obstacles on their journey to black belt.</div>
+        </details>
+        <details class="faq-item">
+          <summary class="faq-q">14. How do I get started?</summary>
+          <div class="faq-a">To get started with your training, contact us or give us a call @ <a href="tel:2532546538" style="color:#14307f; text-decoration:underline;">253-254-6538</a>. We look forward to seeing you on the mats!</div>
+        </details>
       </div>
     </section>
 
@@ -725,28 +664,6 @@
     document.getElementById('imgModal').onclick = function(e) {
       if(e.target === this) closeImgPopup();
     };
-
-    // Collapsible logic for Code of Conduct and FAQ
-    document.querySelectorAll('.collapsible').forEach(function(btn) {
-      btn.addEventListener('click', function() {
-        // Toggle active class on button
-        btn.classList.toggle('active');
-        // Only for code of conduct (has sibling .collapsible-content)
-        var content = btn.nextElementSibling;
-        if(content && content.classList.contains('collapsible-content')) {
-          content.classList.toggle('active');
-        }
-      });
-    });
-    // By default: Code of Conduct expanded, FAQs collapsed
-    document.querySelectorAll('.collapsible-content').forEach(function(el, idx){
-      if(idx === 0) el.classList.add('active'); // Code of Conduct open
-      else el.classList.remove('active'); // FAQ closed
-    });
-    document.querySelectorAll('.collapsible').forEach(function(el, idx){
-      if(idx === 0) el.classList.add('active');
-      else el.classList.remove('active');
-    });
   </script>
 </body>
 </html>
